Controlling parallelism